language_tests/outputs/invalid/fstring_unterminated_interpolation.out
error: lexer error: unterminated f-string interpolation
 -> language_tests/source_files/invalid/fstring_unterminated_interpolation.tr:2:12
	    let _ = f"{name"
	            ^^^^^^^^
